s/catalog/catalogue/g as per OGC spelling

--- a/catalogue_metadata.html
+++ b/catalogue_metadata.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8">
-        <title> Catalog Metadata — GeoNode </title> 
+        <title> Catalogue Metadata — GeoNode </title> 
         <link rel="shortcut icon" href="static/img/favicon.ico" />
         <meta name='description' content='GeoNode'/>
         <meta name='keywords' content='GeoNode'/>
@@ -48,7 +48,7 @@
                             <h5><a href="admin_features.html">Administrator Features:</a></h5>
                             <ul class="unstyled">
                                 <li><a href="ogc_sdi.html">Spatial Data Infrastructure</strong></a></li>
-                                <li><a href="catalog_metadata.html"><strong>Metadata</strong></a></li>
+                                <li><a href="catalogue_metadata.html"><strong>Metadata</strong></a></li>
                                 <li><a href="security.html"><strong>Security</strong></a></li>
                                 <li><a href="scale.html"><strong>Scaleablity</strong></a></li>
                                 <li><a href="admin_console.html"><strong>Admin Console</strong></a></li>
@@ -68,7 +68,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span7">
-                        <h1>Metadata Catalog and Management</h1>
+                        <h1>Metadata Catalogue and Management</h1>
                         <article class="article1">
                             <h5></h5>
                         </article>
