--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -72,14 +72,14 @@
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>Metadata</strong></h2>
-                            <h4>Metadata Catalog, Authoring and Management</h4>
+                            <h4>Metadata Catalogue, Authoring and Management</h4>
                             <ul class="unstyled">
                                 <li>CSW</li>
                                 <li>Search</li>
                                 <li>Format Support</li>
                                 <li>Versioning</li>
                             </ul>
-                            <a href="catalog_metadata.html" class="btn btn-success">Learn about GeoNode's Metadata Capabilities</a>
+                            <a href="catalogue_metadata.html" class="btn btn-success">Learn about GeoNode's Metadata Capabilities</a>
                         </div>
                     </div>
                     <div class="span5">
