--- a/pages/catalogue_metadata.html
+++ b/pages/catalogue_metadata.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %} Catalog Metadata — {{ block.super }} {% endblock %}
+{% block title %} Catalogue Metadata — {{ block.super }} {% endblock %}
 
 {% block body_class %}geonode-features{% endblock %}
 
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span7">
-                        <h1>Metadata Catalog and Management</h1>
+                        <h1>Metadata Catalogue and Management</h1>
                         <article class="article1">
                             <h5></h5>
                         </article>
