--- a/user_features.html
+++ b/user_features.html
@@ -93,7 +93,7 @@
                             <ul class="unstyled">
                                 <li>Powerful Spatial Search Engine</li>
                                 <li>Federated OGC Servers</li>
-                                <li>Metadata Catalog</li>
+                                <li>Metadata Catalogue</li>
                                 <li>Something else</li>
                             </ul>
                             <a href="explore_discover.html" class="btn btn-success">Learn about GeoNode's Discovery Features</a>
