--- a/ogc_sdi.html
+++ b/ogc_sdi.html
@@ -48,7 +48,7 @@
                             <h5><a href="admin_features.html">Administrator Features:</a></h5>
                             <ul class="unstyled">
                                 <li><a href="ogc_sdi.html">Spatial Data Infrastructure</strong></a></li>
-                                <li><a href="catalog_metadata.html"><strong>Metadata</strong></a></li>
+                                <li><a href="catalogue_metadata.html"><strong>Metadata</strong></a></li>
                                 <li><a href="security.html"><strong>Security</strong></a></li>
                                 <li><a href="scale.html"><strong>Scaleablity</strong></a></li>
                                 <li><a href="admin_console.html"><strong>Admin Console</strong></a></li>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="span4 offset1">
                         <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="pull-right" />
-                        <a href="catalog_metadata.html" class="btn btn-warning btn-next pull-right">
+                        <a href="catalogue_metadata.html" class="btn btn-warning btn-next pull-right">
                             <span class="arrow-right">Next: <strong>Metadata</strong></span>
                         </a>
                     </div>
