--- a/pages/ogc_sdi.html
+++ b/pages/ogc_sdi.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="span4 offset1">
                         <img src="static/img/iphone_explore_maps.png" width="309" height="700" alt="Explore Maps" class="pull-right" />
-                        <a href="catalog_metadata.html" class="btn btn-warning btn-next pull-right">
+                        <a href="catalogue_metadata.html" class="btn btn-warning btn-next pull-right">
                             <span class="arrow-right">Next: <strong>Metadata</strong></span>
                         </a>
                     </div>
