--- a/scale.html
+++ b/scale.html
@@ -48,7 +48,7 @@
                             <h5><a href="admin_features.html">Administrator Features:</a></h5>
                             <ul class="unstyled">
                                 <li><a href="ogc_sdi.html">Spatial Data Infrastructure</strong></a></li>
-                                <li><a href="catalog_metadata.html"><strong>Metadata</strong></a></li>
+                                <li><a href="catalogue_metadata.html"><strong>Metadata</strong></a></li>
                                 <li><a href="security.html"><strong>Security</strong></a></li>
                                 <li><a href="scale.html"><strong>Scaleablity</strong></a></li>
                                 <li><a href="admin_console.html"><strong>Admin Console</strong></a></li>
