first pass at CSW/OGC/SDI doc content

--- a/pages/catalogue_metadata.html
+++ b/pages/catalogue_metadata.html
@@ -12,15 +12,17 @@
                     <div class="span7">
                         <h1>Metadata Catalogue and Management</h1>
                         <article class="article1">
-                            <h5></h5>
-                        </article>
-
-                        <article class="article2">
-                            <h5></h5>
+                            <h5>Standards-based metadata management</h5>
+                            <ul>
+                                <li>create and edit geospatial metadata</li>
+                                <li>publish to multiple formats (ISO, FGDC, DIF, etc.)</li>
+                                <li>upload metadata</li>
+                                <li>connect and federate with CSW</li>
+                            </ul>
                         </article>
 
                         <div class="box2">
-                            <h4><a href="#">Learn More About</a></h4>
+                            <h4><a href="http://docs.geonode.org/en/dev/developers/reference/django-apps.html#id1">Learn More About</a></h4>
                         </div>
                     </div>
                     <div class="span4 offset1">
