--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -60,6 +60,7 @@
                                 <li>Based on reliable, mature open source geospatial software</li>
                                 <li>PostGIS Spatial Databases</li>
                                 <li>GeoServer OGC Services</li>
+                                <li>pycsw CSW Metadata Catalogue</li>
                                 <li>Geospatial Python libraries</li>
                                 <li>OpenLayers and GeoExt Web Mapping Libraries</li>
                             </ul>
