Update pages with metadata content

--- a/admin_features.html
+++ b/admin_features.html
@@ -92,7 +92,7 @@
                             <h2>OGC Compliant SDI</strong></h2>
                             <h4>Essential components for deploying OGC SDI</h4>
                             <ul class="unstyled">
-                                <li>WMS/WFS/WCS</li>
+                                <li>WMS/WFS/WCS/WMC</li>
                                 <li>CSW</li>
                             </ul>
                             <a href="ogc_sdi.html" class="btn btn-success">Learn about GeoNode for SDI</a>
@@ -110,6 +110,7 @@
                             <h4>Metadata Catalogue, Authoring and Management</h4>
                             <ul class="unstyled">
                                 <li>CSW</li>
+                                <li>Upload</li>
                                 <li>Search</li>
                                 <li>Format Support</li>
                                 <li>Versioning</li>
