--- a/ogc_sdi.html
+++ b/ogc_sdi.html
@@ -70,11 +70,7 @@
                     <div class="span7">
                         <h1>OGC Compliant Spatial Data Infrastructure</h1>
                         <article class="article1">
-                            <h5></h5>
-                        </article>
-
-                        <article class="article2">
-                            <h5></h5>
+                            <p>GeoNode enables users to publish geospatial data and services using SDI compliant standards from OGC and ISO.  SDI compliant standards enable federated discovery, access, and integration.</p>
                         </article>
 
                         <div class="box2">
