--- a/opensource_geospatial.html
+++ b/opensource_geospatial.html
@@ -86,8 +86,12 @@
                             <p></p>
                         </article>
                         <article class="article2">
-                            <h5>Geospatial python libraries</h5>
-                            <p></p>
+                            <h5>pycsw CSW Metadata Catalogue</h5>
+                            <p>pycsw is an OGC CSW server implementation written in Python.  Lightweight, flexible, embeddable.</p>
+                        </article>
+                        <article class="article2">
+                            <h5>OWSLib Geospatial Python library</h5>
+                            <p>OWSLib provides access to OGC services in a Pythonic way.</p>
                         </article>
                         <div class="box2">
                             <h4><a href="http://docs.geonode.org/en/latest/#for-developers" target="_blank">Read the developer documentation</a></h4>
