Update link for users workshop

--- a/collaboration.html
+++ b/collaboration.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="/workshops/users/" target="_blank">Follow our <strong>Users Workshop</strong></a>
+                            <a href="/workshops/user/" target="_blank">Follow our <strong>Users Workshop</strong></a>
                         </div>
                     </div>
                 </div>
