Update user workshop

--- a/workshops/user/layers/upload.html
+++ b/workshops/user/layers/upload.html
@@ -116,7 +116,7 @@
 <p class="caption"><em>Main toolbar for GeoNode</em></p>
 </div>
 <div class="figure">
-<img alt="layers/../tour/img/layers.png" src="layers/../tour/img/layers.png" />
+<img alt="../_images/layers1.png" src="../_images/layers1.png" />
 <p class="caption"><em>Layers menu</em></p>
 </div>
 </li>
