Update link to admin workshop and republish

--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="http://docs.geonode.org/en/latest/#for-administrators" target="_blank">Follow the Administrators <strong>Workshop</strong></a>
+                            <a href="/workshops/admin/" target="_blank">Follow the Administrators <strong>Workshop</strong></a>
                         </div>
                     </div>
                 </div>
