--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="span2">
                         <div class="pull-right link-extra">
-                            <a href="http://docs.geonode.org/en/latest/#for-developers" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
+                            <a href="workshops/devel/" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
                         </div>
                     </div>
                 </div>
