--- a/admin_features.html
+++ b/admin_features.html
@@ -31,7 +31,7 @@
                     <div class="span6">
                         <div>
                             <a href="install.html" class="btn btn-success">Install GeoNode Now</a>
-                            <a target="_blank" href="http://ui.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
+                            <a target="_blank" href="http://alpha.dev.geonode.org/" class="btn btn-warning">Try the Demo</a>
                         </div>
                     </div>
                 </div>
