--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -10,12 +10,12 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>Hello User,</strong>,<br />
-                            <span>Let us introduce you to the user features of <strong>GeoNode</strong>.</span>
+                            <strong>Hello User</strong>,<br />
+                            <span>Let us introduce you to the user features of <strong>GeoNode</strong>,a complete web mapping solution.
+                            </span>
                         </h1>
-                        <p>
-                            This tour will introduce the features of GeoNode, a complete web mapping solution.
-                        </p>
+                
+                        
                     </div>
                     <div class="span6">
                         <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
