--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -84,7 +84,7 @@
                           <div>
 					                            	 <p>
 					                            	 GeoNode makes it easy to upload and manage data through the web. Any user can upload data and make it available through OGC standards. Data is available for browsing, searching and styling.<br/>
-					                            	 Supported formats include Shapefiles and GeoTiffs, more formats will be supported soon!
+					                            	 Supported formats include Shapefiles, GeoTiffs, KML and CSV. More formats will be supported soon!
 					                            	 Features include:
 					                            	</p>
 					                            </div>
@@ -115,7 +115,13 @@
                         <div class="highlighted-box">
                             <h2>Interactive Mapping</strong></h2>
                             <h4>Create and Share Interactive Web Maps</h4>
-                            <ul class="unstyled">
+                         
+								<div>
+									<p>GeoNode comes with helpful cartography tools for styling and composing maps through the web. Compose 
+									Features include:
+									</p>
+								</div>
+	   <ul class="unstyled">
                                 <li>GeoExplorer GIS Client</li>
                                 <li>Interactively Style Editor</li>
                                 <li>Create Multi Layer and Service Maps</li>
