--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -11,12 +11,13 @@
                     <div class="span6">
                         <h1>
                             <strong>Hello User</strong>,<br />
-                            <span>Let us introduce you to the user features of <strong>GeoNode</strong>,a complete web mapping solution.
+                            <span>Let us introduce you to the user features of <strong>GeoNode</strong>, a complete web mapping solution.
                             </span>
                         </h1>
-                
-                        
-                    </div>
+                        <div class="">
+                            <a href="/workshops/user/" class="btn btn-success" target="_blank">Follow our <strong>Users Workshop</strong></a>
+                        </div>
+                    </div>                        
                     <div class="span6">
                         <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
                     </div>
@@ -37,11 +38,6 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="span2">
-                        <div class="pull-right link-extra">
-                            <a href="/workshops/user/" target="_blank">Follow our <strong>Users Workshop</strong></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -61,7 +57,7 @@
                                 <li>Metadata Catalogue</li>
                                 <li>Something else</li>
                             </ul>
-                            <a href="explore_discover.html" class="btn btn-success">Learn about GeoNode's Discovery Features</a>
+                            <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
                         </div>
                     </div>
                 </div>
@@ -81,7 +77,7 @@
                                 <li>GIS Data Editor (versioning)</li>
                                 <li>Something else</li>
                             </ul>
-                            <a href="import_manage.html" class="btn btn-success">Learn about GeoNode's Data Management Features</a>
+                            <a href="import_manage.html" class="hide btn btn-success">Learn about GeoNode's Data Management Features</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -106,7 +102,7 @@
                                 <li>Create Multi Layer and Service Maps</li>
                                 <li>Share and embed interactive maps</li>
                             </ul>
-                            <a href="mapping.html" class="btn btn-success">Learn about GeoNode's Mapping Features</a>
+                            <a href="mapping.html" class="hide btn btn-success">Learn about GeoNode's Mapping Features</a>
                         </div>
                     </div>
                 </div>
@@ -125,7 +121,7 @@
                                 <li>Activity Stream</li>
                                 <li>Announcements and Notifications</li>
                             </ul>
-                            <a href="collaboration.html" class="btn btn-success">Learn about GeoNode's Collaboration Features</a>
+                            <a href="collaboration.html" class="hide btn btn-success">Learn about GeoNode's Collaboration Features</a>
                         </div>
                     </div>
                     <div class="span5">
