--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -56,8 +56,8 @@
                             <h4>Browse and search for geospatial data</h4>
                             <div>
 							                            	 <p>
-							                            	 By enabling the kind of collaboration that has previously been limited to social networks and specialized geospatial tools GeoNode makes it easy to find geospatial data. 
-							                            	 </br>With extensive user controls datasets can be shared publicly or restricted to allow access to only specific users.
+							                            	 By enabling the kind of collaboration that has previously been limited to social networks and specialized geospatial tools GeoNode makes it easy to find geospatial data.</p>
+							                            	 <p>With extensive user controls datasets can be shared publicly or restricted to allow access to only specific users.
 
 							                            	 </br>Features include:
 							                            	</p>
@@ -83,8 +83,8 @@
                             <h4>Upload and securely share geospatial data</h4>
                           <div>
 					                            	 <p>
-					                            	 GeoNode makes it easy to upload and manage data through the web. Any user can upload data and make it available through OGC standards. Data is available for browsing, searching and styling.<br/>
-					                            	 Supported formats include Shapefiles, GeoTiffs, KML and CSV. More formats will be supported soon!</br>
+					                            	 GeoNode makes it easy to upload and manage data through the web. Any user can upload data and make it available through OGC standards. Data is available for browsing, searching and styling.</p>
+					                            	 <p>Supported formats include Shapefiles, GeoTiffs, KML and CSV. More formats will be supported soon!</br>
 					                            	 Features include:
 					                            	</p>
 					                            </div>
@@ -117,7 +117,8 @@
                             <h4>Create and Share Interactive Web Maps</h4>
                          
 								<div>
-									<p>GeoNode comes with helpful cartography tools for styling and composing maps through the web. These tools make it easy for anyone to assemble a browser based mapping application with functionality traditionally found in the desktop GIS world. With GeoNode users can add and style, style and publish layers with ease. By leveraging GeoExplorer users gain enhanced interactivity with GIS specific tools like identify, query, measure, create feature, and more.</br>
+									<p>GeoNode comes with helpful cartography tools for styling and composing maps through the web. These tools make it easy for anyone to assemble a browser based mapping application with functionality traditionally found in the desktop GIS world.</p>
+									<p>With GeoNode users can add and style, style and publish layers with ease. By leveraging GeoExplorer users gain enhanced interactivity with GIS specific tools like identify, query, measure, create feature, and more.</br>
 									Features include:
 									</p>
 								</div>
@@ -141,14 +142,14 @@
                             <h2>Collaboration</strong></h2>
                             <h4>Social & Collaborative features</h4>
 							<div>
-								<p>GeoNode is all about collaboration. With feature-rich web-based editing and map styling, easy data sharing, and OGC-compliant service endpoints, GeoNode enables the kind of collaboration that has previously been limited to social networks and specialized geospatial tools. GeoNode is designed to share data simply and easily through crating collaborating. <br>Features include: 	
+								<p>GeoNode is all about collaboration. With feature-rich web-based editing and map styling, easy data sharing, and OGC-compliant service endpoints, GeoNode enables the kind of collaboration that has previously been limited to social networks and specialized geospatial tools.</p>
+								<p>GeoNode is designed to share data simply and easily through crating collaborating. <br>Features include: 	
 								</p>
 							</div>
                             <ul class="unstyled">
                                 <li>Review, rate, and comment</li>
                                 <li>User groups</li>
                                 <li>Activity stream</li>
-<li>Connect or download using existing GIS tools</li>
                                 <li>Announcements and notifications</li>
                             </ul>
                             <a href="collaboration.html" class="btn btn-success">Learn about GeoNode's Collaboration Features</a>
