--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -10,11 +10,12 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-					    <strong>Hello User</strong>,<br />
-					    <span>Learn more about the user features of <strong>GeoNode</strong>, a complete web mapping solution.</span>
-	                   </h1>
-                
-                        
+                            <strong>Hello User</strong>,<br />
+                            <span>Learn more about the user features of <strong>GeoNode</strong>, a complete web mapping solution.</span>
+	                </h1>
+                        <div>
+                            <a href="/workshops/user/" class="btn btn-success" target="_blank">Follow our <strong>Users Workshop</strong></a>
+                        </div>
                     </div>
                     <div class="span6">
                         <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
@@ -36,11 +37,6 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="span2">
-                        <div class="pull-right link-extra">
-                            <a href="/workshops/user/" target="_blank">Follow our <strong>Users Workshop</strong></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -55,20 +51,18 @@
                             <h2>Spatial Data Discovery</h2>
                             <h4>Browse and search for geospatial data</h4>
                             <div>
-							                            	 <p>
-							                            	 By enabling the kind of collaboration that has previously been limited to social networks and specialized geospatial tools GeoNode makes it easy to find geospatial data.</p>
-							                            	 <p>With extensive user controls datasets can be shared publicly or restricted to allow access to only specific users.
-
-							                            	 </br>Features include:
-							                            	</p>
-							                            </div>
+                                <p>By enabling the kind of collaboration that has previously been limited to social networks and specialized geospatial tools GeoNode makes it easy to find geospatial data.</p>
+							    <p>With extensive user controls datasets can be shared publicly or restricted to allow access to only specific users.
+							    </br>Features include:
+							    </p>
+							</div>
 
 							                            <ul class="unstyled">
 							                                <li>Powerful Spatial Search Engine</li>
 							                                <li>Federated OGC Servers</li>
 							                                <li>Metadata Catalogue</li>
 							                            </ul>
- <a href="explore_discover.html" class="btn btn-success">Learn about GeoNode's Discovery Features</a>
+ <a href="explore_discover.html" class="hide btn btn-success">Learn about GeoNode's Discovery Features</a>
                         </div>
                     </div>
                 </div>
@@ -96,7 +90,7 @@
 					                                <li>GIS Data Editor (versioning)</li>
 
 					                            </ul>
-                            <a href="import_manage.html" class="btn btn-success">Learn about GeoNode's Data Management Features</a>
+                            <a href="import_manage.html" class="hide btn btn-success">Learn about GeoNode's Data Management Features</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -128,7 +122,7 @@
                                 <li>Create multi-layer and service maps</li>
                                 <li>Share and embed interactive maps</li>
                             </ul>
-                            <a href="mapping.html" class="btn btn-success">Learn about GeoNode's Mapping Features</a>
+                            <a href="mapping.html" class="hide btn btn-success">Learn about GeoNode's Mapping Features</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +146,7 @@
                                 <li>Activity stream</li>
                                 <li>Announcements and notifications</li>
                             </ul>
-                            <a href="collaboration.html" class="btn btn-success">Learn about GeoNode's Collaboration Features</a>
+                            <a href="collaboration.html" class="hide btn btn-success">Learn about GeoNode's Collaboration Features</a>
                         </div>
                     </div>
                     <div class="span5">
