--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -10,12 +10,10 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>Hello Developer,</strong>,<br />
-                            <span>Let us introduce you to the development features of <strong>GeoNode</strong>.</span>
+                            <strong>Hello Developer</strong>,<br />
+                            <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
                         </h1>
-                        <p>
-                            This tour will introduce the features of GeoNode, a complete web mapping solution.
-                        </p>
+                     
                     </div>
                     <div class="span6">
                         <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
@@ -55,9 +53,14 @@
                     <div class="span7 number one">
                         <div class="highlighted-box">
                             <h2>Open Source Geospatial</strong></h2>
-                            <h4>Solid foundation on Open Source Geospatial</h4>
+                            <h4>Open from top to bottom</h4>
+							<div>
+							<p>GeoNode is built upon a platform of proven open source components including GeoServer, GeoNetwork, Django, and GeoExt,  GeoNode implements many Open Geospatial Consortium (OGC) standards, including WMS, WFS, WCS, KML, and CSW. GeoNode development always is always contributed to the underlying open source projects and software libraries.
+							</br>Components include: 
+							</p>
+							</div>
                             <ul class="unstyled">
-                                <li>Based on reliable, mature open source geospatial software</li>
+
                                 <li>PostGIS Spatial Databases</li>
                                 <li>GeoServer OGC Services</li>
                                 <li>pycsw CSW Metadata Catalogue</li>
@@ -76,8 +79,15 @@
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>Django</strong></h2>
-                            <h4>Built on the Django web Framework</h4>
+                            <h4>Built for the web</h4>
                             <ul class="unstyled">
+							<div>
+								<p>GeoNode leverages the Django web Framework, creating a friendly environment for web developers accustomed to using a real web framework. As opposed to other geospatial tools, which force developers to adapt to a "GIS" environment, GeoNode and Django offer a place where developers can build sites using tools they are comfortable and familiar with.</p>
+								<p>
+								Django brings its large user base and ecosystem of apps, making it easier than ever to develop modern, social websites.
+								</br>Features Include: 	
+								</p>
+							</div>
                                 <li>Modern, high productivity web framework</li>
                                 <li>Pluggable GeoNode Django apps</li>
                                 <li>Deployable Template GeoNode projects</li>
@@ -104,6 +114,11 @@
                         <div class="highlighted-box">
                             <h2>Bootstrap and jQuery</strong></h2>
                             <h4>Modern and flexible web front end</h4>
+						<div>
+							<p>
+							</br>Features include: 	
+							</p>
+						<div>
                             <ul class="unstyled">
                                 <li>Bootstrap CSS Framework</li>
                                 <li>jQuery javascript front end and plugins</li>
@@ -122,7 +137,12 @@
                     <div class="span7 number two">
                         <div class="highlighted-box">
                             <h2>APIs<strong></h2>
-                            <h4>Multiple points for application integration</h4>
+                            <h4>Integrate easily</h4>
+						<div>
+							<p>Because of it's solid foundation in open source GeoNode supports multiple points for application integration. 
+							</br>Features include: 
+							</p>
+						</div>
                             <ul class="unstyled">
                                 <li>OGC Compliant Web Services</li>
                                 <li>GeoServer REST API</li>
@@ -147,7 +167,13 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Interoperability</strong></h2>
-                            <h4>Integration with external Applications & Platforms</h4>
+                            <h4>GeoNode plays well with others</h4>
+						<div>
+							<p>GeoNode is not only a geospatial platform, it's a social one. Easily interoperate across other GeoNodes and many other popular social 				
+								services. 
+							</br>	
+							</p>
+						</div>
                             <ul class="unstyled">
                                 <li>Federates with other GeoNode's</li>
                                 <li>Federates with other OGC Compliant SDI (CSW/WMS)</li>
@@ -161,7 +187,7 @@
                 </div>
             </div>
         </section>
-        <section class="continue">
+        <section class="hide">
             <div class="container">
                 <a href="#">Continue</a>
             </div>
