--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -13,7 +13,9 @@
                             <strong>Hello Developer</strong>,<br />
                             <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
                         </h1>
-                     
+                        <div class="pull-right link-extra">
+                            <a href="workshops/devel/" class="btn btn_success" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
+                        </div>
                     </div>
                     <div class="span6">
                         <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
@@ -35,11 +37,6 @@
                                 <li><a href="#interoperability">Interoperability</strong></a></li>
                             </ul>
                         </nav>
-                    </div>
-                    <div class="span2">
-                        <div class="pull-right link-extra">
-                            <a href="workshops/devel/" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -67,7 +64,7 @@
                                 <li>Geospatial Python libraries</li>
                                 <li>OpenLayers and GeoExt Web Mapping Libraries</li>
                             </ul>
-                            <a href="opensource_geospatial.html" class="btn btn-success">Learn about GeoNode's Open Source Geospatial Foundation</a>
+                            <a href="opensource_geospatial.html" class="hide btn btn-success">Learn about GeoNode's Open Source Geospatial Foundation</a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +92,7 @@
                                 <li>Large ecosystem of third-party pluggable apps</li>
                                 <li>Spatial GeoDjango ORM Available</li>
                             </ul>
-                            <a href="django.html" class="btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
+                            <a href="django.html" class="hide btn btn-success">Learn about GeoNode's pluggable Django apps and deployable projects</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -113,7 +110,7 @@
                     <div class="span7 number three">
                         <div class="highlighted-box">
                             <h2>Bootstrap and jQuery</strong></h2>
-                            <h4>Modern and flexible web front end</h4>
+                            <h4>Modern and flexible web front-end</h4>
 						<div>
 							<p>
 							</br>Features include: 	
@@ -125,7 +122,7 @@
                                 <li>Django templating system</li>
                                 <li>Themable with lessc and bootswatch</li>
                             </ul>
-                            <a href="bootstrap_jquery.html" class="btn btn-success">Learn about GeoNode's Front End</a>
+                            <a href="bootstrap_jquery.html" class="hide btn btn-success">Learn about GeoNode's Front End</a>
                         </div>
                     </div>
                 </div>
@@ -149,7 +146,7 @@
                                 <li>GeoNode Search and REST APIs</li>
                                 <li>Tile Map Service (TMS)</li>
                             </ul>
-                            <a href="apis.html" class="btn btn-success">Learn about GeoNode's APIs</a>
+                            <a href="apis.html" class="hide btn btn-success">Learn about GeoNode's APIs</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -181,7 +178,7 @@
                                 <li>Integrates with other Social Services & Platforms (Twitter, Facebook, Google+, LinkedIn, Jive, Telligent)</li>
                                 <li>Integrates with other CMS (Wordpress, Drupal)</li>
                             </ul>
-                            <a href="interoperability.html" class="btn btn-success">Learn more about Interoperability with External systems</a>
+                            <a href="interoperability.html" class="hide btn btn-success">Learn more about Interoperability with External systems</a>
                         </div>
                     </div>
                 </div>
