--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -13,7 +13,7 @@
                             <strong>Hello Developer</strong>,<br />
                             <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
                         </h1>
-                        <div class="pull-right link-extra">
+                        <div>
                             <a href="workshops/devel/" class="btn btn_success" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
                         </div>
                     </div>
