--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -16,6 +16,9 @@
                         <p>
                             This tour will introduce the features of GeoNode, a complete web mapping solution.
                         </p>
+                        <div class="">
+                            <a href="/workshops/admin/" class="btn btn-success" target="_blank">Follow the Administrators <strong>Workshop</strong></a>
+                        </div>
                     </div>
                     <div class="span6">
                         <img src="static/img/features_hero_img.png" width="489" height="216" alt="" class="pull-right hero-img" />
@@ -38,11 +41,6 @@
                             </ul>
                         </nav>
                     </div>
-                    <div class="span2">
-                        <div class="pull-right link-extra">
-                            <a href="/workshops/admin/" target="_blank">Follow the Administrators <strong>Workshop</strong></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -60,7 +58,7 @@
                                 <li>WMS/WFS/WCS/WMC</li>
                                 <li>CSW</li>
                             </ul>
-                            <a href="ogc_sdi.html" class="btn btn-success">Learn about GeoNode for SDI</a>
+                            <a href="ogc_sdi.html" class="hide btn btn-success">Learn about GeoNode for SDI</a>
                         </div>
                     </div>
                 </div>
@@ -80,7 +78,7 @@
                                 <li>Format Support</li>
                                 <li>Versioning</li>
                             </ul>
-                            <a href="catalogue_metadata.html" class="btn btn-success">Learn about GeoNode's Metadata Capabilities</a>
+                            <a href="catalogue_metadata.html" class="hide btn btn-success">Learn about GeoNode's Metadata Capabilities</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -102,7 +100,7 @@
                             <ul class="unstyled">
                                 <li>Permissions</li>
                             </ul>
-                            <a href="security.html" class="btn btn-success">Learn about GeoNode's Security Framework</a>
+                            <a href="security.html" class="hide btn btn-success">Learn about GeoNode's Security Framework</a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +115,7 @@
                             <h4>Scalability, reliability</h4>
                             <ul class="unstyled">
                             </ul>
-                            <a href="scale.html" class="btn btn-success">Learn about Deploying and Scaling GeoNode</a>
+                            <a href="scale.html" class="hide hide btn btn-success">Learn about Deploying and Scaling GeoNode</a>
                         </div>
                     </div>
                     <div class="span5">
@@ -140,7 +138,7 @@
                                 <li>Metadata Editing</li>
                                 <li>Bulk Operations</li>
                             </ul>
-                            <a href="admin_console.html" class="btn btn-success">Learn about GeoNode's Admin Console</a>
+                            <a href="admin_console.html" class="hide btn btn-success">Learn about GeoNode's Admin Console</a>
                         </div>
                     </div>
                 </div>
