--- a/pages/dev_features.html
+++ b/pages/dev_features.html
@@ -14,7 +14,7 @@
                             <span>Learn more about the powerful development features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <div>
-                            <a href="workshops/devel/" class="btn btn_success" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
+                            <a href="workshops/devel/" class="btn btn-success" target = "_blank">Follow the <strong>Developer Workshop</strong></a>
                         </div>
                     </div>
                     <div class="span6">
