--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </section>
-        <section class="continue">
+        <section class="hide continue">
             <div class="container">
                 <a href="#">Continue</a>
             </div>
