--- a/collaboration.html
+++ b/collaboration.html
@@ -4,19 +4,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8">
         <title> Collaboration — GeoNode </title> 
-        <link rel="shortcut icon" href="static/img/favicon.ico" />
+        <link rel="shortcut icon" href="/static/img/favicon.ico" />
         <meta name='description' content='GeoNode'/>
         <meta name='keywords' content='GeoNode'/>
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-        <link rel='stylesheet' href='static/css/site.css' type='text/css' media='all' />
+        <link rel='stylesheet' href='/static/css/site.css' type='text/css' media='all' />
         <!-- HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
 	
-        <script type="text/javascript" src="static/js/jquery.js"></script>
-        <script type="text/javascript" src="static/js/sequence.jquery-min.js"></script>
+        <script type="text/javascript" src="/static/js/jquery.js"></script>
+        <script type="text/javascript" src="/static/js/sequence.jquery-min.js"></script>
 		<script src="./static/js/main.js"></script>
 	
     </head>
