update user feautures

--- a/pages/user_features.html
+++ b/pages/user_features.html
@@ -112,7 +112,7 @@
                          
 								<div>
 									<p>GeoNode comes with helpful cartography tools for styling and composing maps through the web. These tools make it easy for anyone to assemble a browser based mapping application with functionality traditionally found in the desktop GIS world.</p>
-									<p>With GeoNode users can add and style, style and publish layers with ease. By leveraging GeoExplorer users gain enhanced interactivity with GIS specific tools like identify, query, measure, create feature, and more.</br>
+									<p>Users can add and style, style and publish layers with ease. By leveraging GeoExplorer users gain enhanced interactivity with GIS specific tools like identify, query, measure, create feature, and more.</br>
 									Features include:
 									</p>
 								</div>
