admin feautures change

--- a/pages/admin_features.html
+++ b/pages/admin_features.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="span6">
                         <h1>
-                            <strong>Hello Administrator,</strong>,<br />
+                            <strong>Hello Administrator</strong>,<br />
                             <span>Let us introduce the administrative features of <strong>GeoNode</strong>.</span>
                         </h1>
                         <p>
